--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "César O. Araújo <oaraujocesar@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "sucrase": "^3.16.0"
   }
 }
