--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon src/server.js"
   },
   "repository": "git@github.com:oaraujocesar/gokursos-node-api.git",
   "author": "César O. Araújo <oaraujocesar@gmail.com>",
